[package]
name = "advent-of-code"
description = "advent-of-code 2023"
version = "0.1.0"
edition = "2021"
authors = ["mosure <mitchell@mosure.me>"]
license = "MIT"
keywords = []
categories = []
homepage = "https://github.com/mosure/advent-of-code"
repository = "https://github.com/mosure/advent-of-code"
readme = "README.md"
exclude = [".devcontainer", ".github", "docs", "dist", "build", "assets", "credits"]


[[bin]]
name = "1"
path = "days/1.rs"

[[bin]]
name = "2"
path = "days/2.rs"

[[bin]]
name = "3"
path = "days/3.rs"

[[bin]]
name = "4"
path = "days/4.rs"